episodes page horizontal scroll fix

--- a/front-end/src/pages/Episodes/Episodes.scss
+++ b/front-end/src/pages/Episodes/Episodes.scss
@@ -8,7 +8,7 @@
   .episodes-main {
     display: flex;
     justify-content: space-evenly;
-    width: 100vw;
+    width: 100%;
     flex-wrap: wrap;
 
     .episodes-link {
